// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes core - theme shape 1`] = `
Object {
  "_getColorValue": [Function],
  "_tokens": Object {
    "colors": Object {
      "beige": "#FFF0E5",
      "beige-100": "#FFF0E5",
      "black": "#000000",
      "blackShadow": "rgba(0, 0, 0, 0.75)",
      "blue": "#1557FF",
      "blue-0": "#F5FCFF",
      "blue-300": "#66C4FF",
      "blue-500": "#1557FF",
      "blue-800": "#1D2340",
      "gray-100": "#F5F5F5",
      "gray-200": "#EEEEEE",
      "gray-300": "#E0E0E0",
      "gray-600": "#9E9E9E",
      "gray-800": "#616161",
      "gray-900": "#424242",
      "green": "#008A27",
      "green-0": "#F5FFE3",
      "green-400": "#AEE938",
      "green-700": "#008A27",
      "hyper": "#3A10E5",
      "hyper-400": "#5533FF",
      "hyper-500": "#3A10E5",
      "lightBlue": "#66C4FF",
      "lightGreen": "#AEE938",
      "navy": "#10162F",
      "navy-800": "#10162F",
      "orange": "#FF8C00",
      "orange-500": "#FF8C00",
      "paleBlue": "#F5FCFF",
      "paleGreen": "#F5FFE3",
      "palePink": "#FFF5FF",
      "paleRed": "#E85D7F",
      "paleYellow": "#FFFAE5",
      "pink": "#F966FF",
      "pink-0": "#FFF5FF",
      "pink-400": "#F966FF",
      "red": "#E91C11",
      "red-300": "#E85D7F",
      "red-500": "#E91C11",
      "white": "#ffffff",
      "whiteShadow": "rgba(255, 255, 255, 0.95)",
      "yellow": "#FFD300",
      "yellow-0": "#FFFAE5",
      "yellow-400": "#CCA900",
      "yellow-500": "#FFD300",
    },
    "elements": Object {
      "headerHeight": Object {
        "base": "4rem",
        "md": "5rem",
      },
    },
  },
  "_variables": Object {
    "mode": Object {
      "--color-background": "var(--color-white)",
      "--color-backgroundEmphasized": "var(--color-gray-100)",
      "--color-backgroundMuted": "var(--color-gray-200)",
      "--color-danger": "var(--color-red)",
      "--color-primary": "var(--color-hyper)",
      "--color-primaryDull": "var(--color-hyper-400)",
      "--color-secondary": "var(--color-navy)",
      "--color-secondaryDull": "var(--color-gray-600)",
      "--color-shadow-opaque": "var(--color-gray-200)",
      "--color-shadow-transparent": "var(--color-whiteShadow)",
      "--color-success": "var(--color-green)",
      "--color-text": "var(--color-navy)",
      "--color-textMuted": "var(--color-gray-600)",
    },
    "root": Object {
      "--color-beige": "#FFF0E5",
      "--color-beige-100": "#FFF0E5",
      "--color-black": "#000000",
      "--color-blackShadow": "rgba(0, 0, 0, 0.75)",
      "--color-blue": "#1557FF",
      "--color-blue-0": "#F5FCFF",
      "--color-blue-300": "#66C4FF",
      "--color-blue-500": "#1557FF",
      "--color-blue-800": "#1D2340",
      "--color-gray-100": "#F5F5F5",
      "--color-gray-200": "#EEEEEE",
      "--color-gray-300": "#E0E0E0",
      "--color-gray-600": "#9E9E9E",
      "--color-gray-800": "#616161",
      "--color-gray-900": "#424242",
      "--color-green": "#008A27",
      "--color-green-0": "#F5FFE3",
      "--color-green-400": "#AEE938",
      "--color-green-700": "#008A27",
      "--color-hyper": "#3A10E5",
      "--color-hyper-400": "#5533FF",
      "--color-hyper-500": "#3A10E5",
      "--color-lightBlue": "#66C4FF",
      "--color-lightGreen": "#AEE938",
      "--color-navy": "#10162F",
      "--color-navy-800": "#10162F",
      "--color-orange": "#FF8C00",
      "--color-orange-500": "#FF8C00",
      "--color-paleBlue": "#F5FCFF",
      "--color-paleGreen": "#F5FFE3",
      "--color-palePink": "#FFF5FF",
      "--color-paleRed": "#E85D7F",
      "--color-paleYellow": "#FFFAE5",
      "--color-pink": "#F966FF",
      "--color-pink-0": "#FFF5FF",
      "--color-pink-400": "#F966FF",
      "--color-red": "#E91C11",
      "--color-red-300": "#E85D7F",
      "--color-red-500": "#E91C11",
      "--color-white": "#ffffff",
      "--color-whiteShadow": "rgba(255, 255, 255, 0.95)",
      "--color-yellow": "#FFD300",
      "--color-yellow-0": "#FFFAE5",
      "--color-yellow-400": "#CCA900",
      "--color-yellow-500": "#FFD300",
      "--elements-headerHeight": "4rem",
      "@media only screen and (min-width: 1024px)": Object {
        "--elements-headerHeight": "5rem",
      },
      "@media only screen and (min-width: 1200px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 1440px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 480px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 768px)": Object {
        "--elements-headerHeight": undefined,
      },
    },
  },
  "borders": Object {
    "1": "1px solid var(--color-secondary)",
    "2": "2px solid var(--color-secondary)",
  },
  "boxShadows": Object {
    "1": " 0 1px 3px rgba(0, 0, 0, 0.12),
  0 1px 3px rgba(0, 0, 0, 0.24)",
    "2": " 0 3px 6px rgba(0, 0, 0, 0.19),
  0 3px 6px rgba(0, 0, 0, 0.23)",
    "3": " 0 10px 20px rgba(0, 0, 0, 0.25),
  0 6px 6px rgba(0, 0, 0, 0.22)",
    "4": " 0 14px 28px rgba(0, 0, 0, 0.25),
  0 10px 10px rgba(0, 0, 0, 0.22)",
    "5": " 0 19px 38px rgba(0, 0, 0, 0.3),
  0 15px 12px rgba(0, 0, 0, 0.22)",
  },
  "breakpoints": Object {
    "lg": "@media only screen and (min-width: 1200px)",
    "md": "@media only screen and (min-width: 1024px)",
    "sm": "@media only screen and (min-width: 768px)",
    "xl": "@media only screen and (min-width: 1440px)",
    "xs": "@media only screen and (min-width: 480px)",
  },
  "colors": Object {
    "background": "var(--color-background)",
    "backgroundEmphasized": "var(--color-backgroundEmphasized)",
    "backgroundMuted": "var(--color-backgroundMuted)",
    "beige": "var(--color-beige)",
    "beige-100": "var(--color-beige-100)",
    "black": "var(--color-black)",
    "blackShadow": "var(--color-blackShadow)",
    "blue": "var(--color-blue)",
    "blue-0": "var(--color-blue-0)",
    "blue-300": "var(--color-blue-300)",
    "blue-500": "var(--color-blue-500)",
    "blue-800": "var(--color-blue-800)",
    "danger": "var(--color-danger)",
    "gray-100": "var(--color-gray-100)",
    "gray-200": "var(--color-gray-200)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "gray-800": "var(--color-gray-800)",
    "gray-900": "var(--color-gray-900)",
    "green": "var(--color-green)",
    "green-0": "var(--color-green-0)",
    "green-400": "var(--color-green-400)",
    "green-700": "var(--color-green-700)",
    "hyper": "var(--color-hyper)",
    "hyper-400": "var(--color-hyper-400)",
    "hyper-500": "var(--color-hyper-500)",
    "lightBlue": "var(--color-lightBlue)",
    "lightGreen": "var(--color-lightGreen)",
    "navy": "var(--color-navy)",
    "navy-800": "var(--color-navy-800)",
    "orange": "var(--color-orange)",
    "orange-500": "var(--color-orange-500)",
    "paleBlue": "var(--color-paleBlue)",
    "paleGreen": "var(--color-paleGreen)",
    "palePink": "var(--color-palePink)",
    "paleRed": "var(--color-paleRed)",
    "paleYellow": "var(--color-paleYellow)",
    "pink": "var(--color-pink)",
    "pink-0": "var(--color-pink-0)",
    "pink-400": "var(--color-pink-400)",
    "primary": "var(--color-primary)",
    "primaryDull": "var(--color-primaryDull)",
    "red": "var(--color-red)",
    "red-300": "var(--color-red-300)",
    "red-500": "var(--color-red-500)",
    "secondary": "var(--color-secondary)",
    "secondaryDull": "var(--color-secondaryDull)",
    "shadow-opaque": "var(--color-shadow-opaque)",
    "shadow-transparent": "var(--color-shadow-transparent)",
    "success": "var(--color-success)",
    "text": "var(--color-text)",
    "textMuted": "var(--color-textMuted)",
    "white": "var(--color-white)",
    "whiteShadow": "var(--color-whiteShadow)",
    "yellow": "var(--color-yellow)",
    "yellow-0": "var(--color-yellow-0)",
    "yellow-400": "var(--color-yellow-400)",
    "yellow-500": "var(--color-yellow-500)",
  },
  "elements": Object {
    "headerHeight": "var(--elements-headerHeight)",
  },
  "fontFamily": Object {
    "accent": "\\"Suisse\\", \\"Apercu\\", -apple-system, BlinkMacSystemFont,
\\"Segoe UI\\", \\"Roboto\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\",
\\"Helvetica Neue\\", sans-serif",
    "base": "\\"Apercu\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\",
\\"Roboto\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\",
sans-serif",
    "monospace": "Monaco, Menlo, \\"Ubuntu Mono\\", \\"Droid Sans Mono\\", Consolas,
monospace",
    "system": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Ubuntu\\",
\\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
  },
  "fontSize": Object {
    "14": "0.875rem",
    "16": "1rem",
    "18": "1.125rem",
    "20": "1.25rem",
    "22": "1.375rem",
    "26": "1.625rem",
    "34": "2.125rem",
    "44": "2.75rem",
    "64": "4rem",
  },
  "fontWeight": Object {
    "base": 400,
    "title": 700,
  },
  "lineHeight": Object {
    "base": 1.5,
    "title": 1.1,
  },
  "mode": "light",
  "modes": Object {
    "dark": Object {
      "background": "navy",
      "backgroundEmphasized": "blue-800",
      "backgroundMuted": "gray-600",
      "danger": "paleRed",
      "primary": "yellow",
      "primaryDull": "yellow-400",
      "secondary": "white",
      "secondaryDull": "gray-200",
      "shadow-opaque": "black",
      "shadow-transparent": "blackShadow",
      "success": "lightGreen",
      "text": "white",
      "textMuted": "gray-200",
    },
    "light": Object {
      "background": "white",
      "backgroundEmphasized": "gray-100",
      "backgroundMuted": "gray-200",
      "danger": "red",
      "primary": "hyper",
      "primaryDull": "hyper-400",
      "secondary": "navy",
      "secondaryDull": "gray-600",
      "shadow-opaque": "gray-200",
      "shadow-transparent": "whiteShadow",
      "success": "green",
      "text": "navy",
      "textMuted": "gray-600",
    },
  },
  "spacing": Object {
    "0": 0,
    "12": "0.75rem",
    "16": "1rem",
    "24": "1.5rem",
    "32": "2rem",
    "4": "0.25rem",
    "48": "3rem",
    "64": "4rem",
    "8": "0.5rem",
    "96": "6rem",
  },
}
`;

exports[`themes platform - theme shape 1`] = `
Object {
  "_getColorValue": [Function],
  "_tokens": Object {
    "colors": Object {
      "beige": "#FFF0E5",
      "beige-0": "#FFFBF8",
      "beige-100": "#FFF0E5",
      "black": "#000000",
      "blackShadow": "rgba(0, 0, 0, 0.75)",
      "blue": "#1557FF",
      "blue-0": "#F5FCFF",
      "blue-300": "#66C4FF",
      "blue-500": "#1557FF",
      "blue-800": "#1D2340",
      "gold": "#8A7300",
      "gold-800": "#8A7300",
      "gray-100": "#F5F5F5",
      "gray-200": "#EEEEEE",
      "gray-300": "#E0E0E0",
      "gray-600": "#9E9E9E",
      "gray-800": "#616161",
      "gray-900": "#424242",
      "green": "#008A27",
      "green-0": "#F5FFE3",
      "green-400": "#AEE938",
      "green-700": "#008A27",
      "hyper": "#3A10E5",
      "hyper-400": "#5533FF",
      "hyper-500": "#3A10E5",
      "lightBeige": "#FFFBF8",
      "lightBlue": "#66C4FF",
      "lightGreen": "#AEE938",
      "navy": "#10162F",
      "navy-300": "#585C6D",
      "navy-600": "#232940",
      "navy-800": "#10162F",
      "navy-900": "#0B0F21",
      "orange": "#FF8C00",
      "orange-500": "#FF8C00",
      "orange-800": "#D14900",
      "paleBlue": "#F5FCFF",
      "paleGreen": "#F5FFE3",
      "palePink": "#FFF5FF",
      "paleRed": "#E85D7F",
      "paleYellow": "#FFFAE5",
      "pink": "#F966FF",
      "pink-0": "#FFF5FF",
      "pink-400": "#F966FF",
      "pink-800": "#CA00D1",
      "purple": "#B3CCFF",
      "purple-300": "#B3CCFF",
      "red": "#E91C11",
      "red-300": "#E85D7F",
      "red-500": "#E91C11",
      "teal": "#027E97",
      "teal-500": "#027E97",
      "white": "#ffffff",
      "whiteShadow": "rgba(255, 255, 255, 0.95)",
      "yellow": "#FFD300",
      "yellow-0": "#FFFAE5",
      "yellow-400": "#CCA900",
      "yellow-500": "#FFD300",
    },
    "elements": Object {
      "headerHeight": Object {
        "base": "4rem",
        "md": "5rem",
      },
    },
  },
  "_variables": Object {
    "mode": Object {
      "--color-background": "var(--color-white)",
      "--color-backgroundEmphasized": "var(--color-gray-100)",
      "--color-backgroundMuted": "var(--color-gray-200)",
      "--color-danger": "var(--color-red)",
      "--color-primary": "var(--color-hyper)",
      "--color-primaryDull": "var(--color-hyper-400)",
      "--color-secondary": "var(--color-navy)",
      "--color-secondaryDull": "var(--color-gray-600)",
      "--color-shadow-opaque": "var(--color-gray-200)",
      "--color-shadow-transparent": "var(--color-whiteShadow)",
      "--color-success": "var(--color-green)",
      "--color-text": "var(--color-navy)",
      "--color-textMuted": "var(--color-gray-600)",
    },
    "root": Object {
      "--color-beige": "#FFF0E5",
      "--color-beige-0": "#FFFBF8",
      "--color-beige-100": "#FFF0E5",
      "--color-black": "#000000",
      "--color-blackShadow": "rgba(0, 0, 0, 0.75)",
      "--color-blue": "#1557FF",
      "--color-blue-0": "#F5FCFF",
      "--color-blue-300": "#66C4FF",
      "--color-blue-500": "#1557FF",
      "--color-blue-800": "#1D2340",
      "--color-gold": "#8A7300",
      "--color-gold-800": "#8A7300",
      "--color-gray-100": "#F5F5F5",
      "--color-gray-200": "#EEEEEE",
      "--color-gray-300": "#E0E0E0",
      "--color-gray-600": "#9E9E9E",
      "--color-gray-800": "#616161",
      "--color-gray-900": "#424242",
      "--color-green": "#008A27",
      "--color-green-0": "#F5FFE3",
      "--color-green-400": "#AEE938",
      "--color-green-700": "#008A27",
      "--color-hyper": "#3A10E5",
      "--color-hyper-400": "#5533FF",
      "--color-hyper-500": "#3A10E5",
      "--color-lightBeige": "#FFFBF8",
      "--color-lightBlue": "#66C4FF",
      "--color-lightGreen": "#AEE938",
      "--color-navy": "#10162F",
      "--color-navy-300": "#585C6D",
      "--color-navy-600": "#232940",
      "--color-navy-800": "#10162F",
      "--color-navy-900": "#0B0F21",
      "--color-orange": "#FF8C00",
      "--color-orange-500": "#FF8C00",
      "--color-orange-800": "#D14900",
      "--color-paleBlue": "#F5FCFF",
      "--color-paleGreen": "#F5FFE3",
      "--color-palePink": "#FFF5FF",
      "--color-paleRed": "#E85D7F",
      "--color-paleYellow": "#FFFAE5",
      "--color-pink": "#F966FF",
      "--color-pink-0": "#FFF5FF",
      "--color-pink-400": "#F966FF",
      "--color-pink-800": "#CA00D1",
      "--color-purple": "#B3CCFF",
      "--color-purple-300": "#B3CCFF",
      "--color-red": "#E91C11",
      "--color-red-300": "#E85D7F",
      "--color-red-500": "#E91C11",
      "--color-teal": "#027E97",
      "--color-teal-500": "#027E97",
      "--color-white": "#ffffff",
      "--color-whiteShadow": "rgba(255, 255, 255, 0.95)",
      "--color-yellow": "#FFD300",
      "--color-yellow-0": "#FFFAE5",
      "--color-yellow-400": "#CCA900",
      "--color-yellow-500": "#FFD300",
      "--elements-headerHeight": "4rem",
      "@media only screen and (min-width: 1024px)": Object {
        "--elements-headerHeight": "5rem",
      },
      "@media only screen and (min-width: 1200px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 1440px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 480px)": Object {
        "--elements-headerHeight": undefined,
      },
      "@media only screen and (min-width: 768px)": Object {
        "--elements-headerHeight": undefined,
      },
    },
  },
  "borders": Object {
    "1": "1px solid var(--color-secondary)",
    "2": "2px solid var(--color-secondary)",
  },
  "boxShadows": Object {
    "1": " 0 1px 3px rgba(0, 0, 0, 0.12),
  0 1px 3px rgba(0, 0, 0, 0.24)",
    "2": " 0 3px 6px rgba(0, 0, 0, 0.19),
  0 3px 6px rgba(0, 0, 0, 0.23)",
    "3": " 0 10px 20px rgba(0, 0, 0, 0.25),
  0 6px 6px rgba(0, 0, 0, 0.22)",
    "4": " 0 14px 28px rgba(0, 0, 0, 0.25),
  0 10px 10px rgba(0, 0, 0, 0.22)",
    "5": " 0 19px 38px rgba(0, 0, 0, 0.3),
  0 15px 12px rgba(0, 0, 0, 0.22)",
  },
  "breakpoints": Object {
    "lg": "@media only screen and (min-width: 1200px)",
    "md": "@media only screen and (min-width: 1024px)",
    "sm": "@media only screen and (min-width: 768px)",
    "xl": "@media only screen and (min-width: 1440px)",
    "xs": "@media only screen and (min-width: 480px)",
  },
  "colors": Object {
    "background": "var(--color-background)",
    "backgroundEmphasized": "var(--color-backgroundEmphasized)",
    "backgroundMuted": "var(--color-backgroundMuted)",
    "beige": "var(--color-beige)",
    "beige-0": "var(--color-beige-0)",
    "beige-100": "var(--color-beige-100)",
    "black": "var(--color-black)",
    "blackShadow": "var(--color-blackShadow)",
    "blue": "var(--color-blue)",
    "blue-0": "var(--color-blue-0)",
    "blue-300": "var(--color-blue-300)",
    "blue-500": "var(--color-blue-500)",
    "blue-800": "var(--color-blue-800)",
    "danger": "var(--color-danger)",
    "gold": "var(--color-gold)",
    "gold-800": "var(--color-gold-800)",
    "gray-100": "var(--color-gray-100)",
    "gray-200": "var(--color-gray-200)",
    "gray-300": "var(--color-gray-300)",
    "gray-600": "var(--color-gray-600)",
    "gray-800": "var(--color-gray-800)",
    "gray-900": "var(--color-gray-900)",
    "green": "var(--color-green)",
    "green-0": "var(--color-green-0)",
    "green-400": "var(--color-green-400)",
    "green-700": "var(--color-green-700)",
    "hyper": "var(--color-hyper)",
    "hyper-400": "var(--color-hyper-400)",
    "hyper-500": "var(--color-hyper-500)",
    "lightBeige": "var(--color-lightBeige)",
    "lightBlue": "var(--color-lightBlue)",
    "lightGreen": "var(--color-lightGreen)",
    "navy": "var(--color-navy)",
    "navy-300": "var(--color-navy-300)",
    "navy-600": "var(--color-navy-600)",
    "navy-800": "var(--color-navy-800)",
    "navy-900": "var(--color-navy-900)",
    "orange": "var(--color-orange)",
    "orange-500": "var(--color-orange-500)",
    "orange-800": "var(--color-orange-800)",
    "paleBlue": "var(--color-paleBlue)",
    "paleGreen": "var(--color-paleGreen)",
    "palePink": "var(--color-palePink)",
    "paleRed": "var(--color-paleRed)",
    "paleYellow": "var(--color-paleYellow)",
    "pink": "var(--color-pink)",
    "pink-0": "var(--color-pink-0)",
    "pink-400": "var(--color-pink-400)",
    "pink-800": "var(--color-pink-800)",
    "primary": "var(--color-primary)",
    "primaryDull": "var(--color-primaryDull)",
    "purple": "var(--color-purple)",
    "purple-300": "var(--color-purple-300)",
    "red": "var(--color-red)",
    "red-300": "var(--color-red-300)",
    "red-500": "var(--color-red-500)",
    "secondary": "var(--color-secondary)",
    "secondaryDull": "var(--color-secondaryDull)",
    "shadow-opaque": "var(--color-shadow-opaque)",
    "shadow-transparent": "var(--color-shadow-transparent)",
    "success": "var(--color-success)",
    "teal": "var(--color-teal)",
    "teal-500": "var(--color-teal-500)",
    "text": "var(--color-text)",
    "textMuted": "var(--color-textMuted)",
    "white": "var(--color-white)",
    "whiteShadow": "var(--color-whiteShadow)",
    "yellow": "var(--color-yellow)",
    "yellow-0": "var(--color-yellow-0)",
    "yellow-400": "var(--color-yellow-400)",
    "yellow-500": "var(--color-yellow-500)",
  },
  "elements": Object {
    "headerHeight": "var(--elements-headerHeight)",
  },
  "fontFamily": Object {
    "accent": "\\"Suisse\\", \\"Apercu\\", -apple-system, BlinkMacSystemFont,
\\"Segoe UI\\", \\"Roboto\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\",
\\"Helvetica Neue\\", sans-serif",
    "base": "\\"Apercu\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\",
\\"Roboto\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\",
sans-serif",
    "monospace": "Monaco, Menlo, \\"Ubuntu Mono\\", \\"Droid Sans Mono\\", Consolas,
monospace",
    "system": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Ubuntu\\",
\\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
  },
  "fontSize": Object {
    "14": "0.875rem",
    "16": "1rem",
    "18": "1.125rem",
    "20": "1.25rem",
    "22": "1.375rem",
    "26": "1.625rem",
    "34": "2.125rem",
    "44": "2.75rem",
    "64": "4rem",
  },
  "fontWeight": Object {
    "base": 400,
    "title": 700,
  },
  "lineHeight": Object {
    "base": 1.5,
    "title": 1.1,
  },
  "mode": "dark",
  "modes": Object {
    "dark": Object {
      "background": "navy",
      "backgroundEmphasized": "blue-800",
      "backgroundMuted": "gray-600",
      "danger": "paleRed",
      "primary": "yellow",
      "primaryDull": "yellow-400",
      "secondary": "white",
      "secondaryDull": "gray-200",
      "shadow-opaque": "black",
      "shadow-transparent": "blackShadow",
      "success": "lightGreen",
      "text": "white",
      "textMuted": "gray-200",
    },
    "light": Object {
      "background": "white",
      "backgroundEmphasized": "gray-100",
      "backgroundMuted": "gray-200",
      "danger": "red",
      "primary": "hyper",
      "primaryDull": "hyper-400",
      "secondary": "navy",
      "secondaryDull": "gray-600",
      "shadow-opaque": "gray-200",
      "shadow-transparent": "whiteShadow",
      "success": "green",
      "text": "navy",
      "textMuted": "gray-600",
    },
  },
  "spacing": Object {
    "0": 0,
    "12": "0.75rem",
    "16": "1rem",
    "24": "1.5rem",
    "32": "2rem",
    "4": "0.25rem",
    "48": "3rem",
    "64": "4rem",
    "8": "0.5rem",
    "96": "6rem",
  },
}
`;
